--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0"
+    "@material-ui/core": "4.1.1",
+    "@material-ui/icons": "^4.2.0",
+    "material-ui": "0.20.2",
+    "react": "16.8.6",
+    "react-dom": "16.8.6"
   },
   "scripts": {
     "start": "react-scripts start",
