--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "4.1.1",
-    "@material-ui/icons": "^4.2.0",
+    "@material-ui/icons": "4.2.0",
+    "@material-ui/styles": "^4.1.1",
     "material-ui": "0.20.2",
     "react": "16.8.6",
     "react-dom": "16.8.6"
